# template_rust

./: Cargo.toml  README.md  shell.nix
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  deploy_prerelease.yml  deploy_release.yml
