[package]
name = "template"
version = "0.1.0"
authors = ["<name>"]
edition = "2021"
rust-version = "1.82.0"
description = "<description>"
readme = "README.md"
repository = "<repository>"
license = "MIT"
keywords = ["<keywords>", "<keywords>"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]